<resources>

    <string name="developer">Ⓓ Desarrollado por José Andres Saavedra Romero</string>

    <!--Home user-->
    <string name="login">Iniciar sesión</string>
    <string name="accept">Aceptar</string>
    <string name="number_document">Número identificación</string>

    <!--Login-->
    <string name="user_login">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">Olvido su contraseña</string>
    <string name="cancel">Cancelar</string>

    <!--Mensajes de error-->
    <string name="we_are_sorry">¡Lo sentimos!</string>
    <string name="ups_error">¡Upss!</string>
    <string name="logical_error">¡Ocurrió un error!.\nPor favor contáctate con el administrador del sistema</string>
    <string name="servidor_error">Hubo un error.\nPor favor revisa tu conexión y vuelve a intentarlo</string>

</resources>