<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="#FF999999"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/dimen20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="@dimen/dimen20dp"
                android:gravity="center"
                android:src="@drawable/logo_gymcamp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/fhm_edtNumberDocument"
                    android:layout_width="@dimen/dimen230dp"
                    android:layout_height="@dimen/dimen30dp"
                    style="@style/AppTheme.etDefaultWidget"
                    android:layout_marginEnd="@dimen/dimen10dp"
                    android:inputType="number"
                    android:hint="@string/number_document"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/flm_btAccep"
                    style="@style/AppTheme.btnDefaultWidget"
                    android:text="@string/accept"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fhm_linearLayoutH" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/flm_btlogin"
                style="@style/AppTheme.btnDefaultWidget"
                android:text="@string/login"
                android:layout_marginTop="@dimen/dimen20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fhm_linearLayoutH" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen200dp"
                android:layout_marginTop="@dimen/dimen30dp"
                android:gravity="center"
                android:src="@drawable/img_portada"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen250dp"
                android:layout_marginTop="@dimen/dimen20dp"
                android:gravity="center"
                android:src="@drawable/img_espalda"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>